--- a/app/dashboard/admin/admin.css
+++ b/app/dashboard/admin/admin.css
@@ -1,24 +1,42 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
 .adminContainer img{
     width: 100%;
     height:357px;
 }
-.adminContainer h1 ,.addEventContainer h2{
+.addEventContainer h2{
     text-align: center;
     margin-bottom: 15px;
     font-size: 31px;
+}
+.adminContainer h1{
+    padding-top: 24px;
+    font-size: 57px;
+    position: absolute;
+    top: 80px;
+    left: 519px;
+    color: #e0dddd;
 }
 .addEventContainer{
     border: 1px solid;
     border-radius: 5px;
     padding: 26px 30px;
-    width: 582px;
+    width: 699px;
     justify-self: center;
+    margin-top: 25px;
 }
-.addEventContainer input,.addEventContainer select, .addEventContainer textarea{
+.addEventContainer input,.addEventContainer select {
     width: 100%;
     display: block;
     padding: 9px 9px;
     margin-bottom: 16px;
+}
+.addEventContainer textarea{
+    width: 100%;
+    display: block;
+    padding: 9px 9px;
 }
 
 .addButton{
@@ -29,4 +47,55 @@
     border: solid 1px;
     border-radius: 19px;
     font-size: 16px;
+}
+
+.addDetails{
+    display: grid;
+    grid-auto-flow: column;
+    gap: 30px;
+}
+.addRight{
+    display: grid;
+}
+.editEventContainer{
+    display: grid;
+    grid-template-columns: 21% 21% 21% 21%;
+    justify-content: center;
+    gap: 2rem;
+    margin: 2rem 2vw;
+}
+.event-card{
+    border: solid 1px;
+    padding: 8px 12px;
+    text-align: center;
+}
+
+.event-card button{
+    /* display: flex; */
+    justify-self: center;
+    margin-top: 13px;
+    padding: 3px 11px;
+    border: solid 1px;
+    border-radius: 6px;
+    font-size: 16px;
+}
+.event-card .deletebtn{
+    display: inline;
+    justify-self: center;
+    margin-top: 13px;
+    margin-left: 21px;
+    padding: 3px 11px;
+    border: 1px solid;
+    border-radius: 6px;
+    font-size: 16px;
+}
+.edithead{
+    text-align: center;
+    padding: 20px 0px;
+    font-size: 32px;
+}
+.line{
+    border: solid 1px rgb(187, 184, 184);
+    height: 0px;
+    margin: 49px 151px;
 }
